add: bearer auth security in documentation
